@@ -22,13 +22,13 @@ import com.navercorp.pinpoint.common.server.util.time.Range;
 import com.navercorp.pinpoint.common.trace.ServiceType;
 import com.navercorp.pinpoint.loader.service.ServiceTypeRegistryService;
 import com.navercorp.pinpoint.web.TestTraceUtils;
+import com.navercorp.pinpoint.web.applicationmap.link.LinkKey;
 import com.navercorp.pinpoint.web.applicationmap.rawdata.LinkData;
 import com.navercorp.pinpoint.web.applicationmap.rawdata.LinkDataDuplexMap;
 import com.navercorp.pinpoint.web.applicationmap.rawdata.LinkDataMap;
 import com.navercorp.pinpoint.web.service.ApplicationFactory;
 import com.navercorp.pinpoint.web.service.DefaultApplicationFactory;
 import com.navercorp.pinpoint.web.vo.Application;
-import com.navercorp.pinpoint.web.vo.LinkKey;
 import com.navercorp.pinpoint.web.vo.ResponseHistograms;
 import com.navercorp.pinpoint.web.vo.ResponseTime;
 import org.junit.jupiter.api.Assertions;
@@ -39,9 +39,10 @@ import org.mockito.junit.jupiter.MockitoExtension;
 import org.mockito.junit.jupiter.MockitoSettings;
 import org.mockito.quality.Strictness;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.Random;
+
+import static org.assertj.core.api.Assertions.assertThat;
 
 /**
  * @author HyunGil Jeong
@@ -108,7 +109,7 @@ public class FilteredMapBuilderTest {
         appASpan.addSpanEvent(appACacheSpanEvent);
 
         // When
-        builder.addTransaction(Arrays.asList(rootSpan, appASpan));
+        builder.addTransaction(List.of(rootSpan, appASpan));
         FilteredMap filteredMap = builder.build();
 
         // Then
@@ -134,23 +135,24 @@ public class FilteredMapBuilderTest {
         ResponseHistograms responseHistograms = filteredMap.getResponseHistograms();
         Application rootApplication = new Application("ROOT_APP", registry.findServiceType(TestTraceUtils.TEST_STAND_ALONE_TYPE_CODE));
         List<ResponseTime> rootAppResponseTimes = responseHistograms.getResponseTimeList(rootApplication);
-        Assertions.assertNotNull(rootAppResponseTimes);
-        Assertions.assertEquals(1, rootAppResponseTimes.size());
+
+        assertThat(rootAppResponseTimes).hasSize(1);
+
         Application applicationA = new Application("APP_A", registry.findServiceType(TestTraceUtils.TEST_STAND_ALONE_TYPE_CODE));
         List<ResponseTime> appAResponseTimes = responseHistograms.getResponseTimeList(applicationA);
-        Assertions.assertNotNull(appAResponseTimes);
-        Assertions.assertEquals(1, appAResponseTimes.size());
+
+        assertThat(appAResponseTimes).hasSize(1);
     }
 
     private void assertSourceLinkData(LinkDataMap sourceLinkDataMap, String fromApplicationName, ServiceType fromServiceType, String toApplicationName, ServiceType toServiceType) {
-        LinkKey linkKey = new LinkKey(fromApplicationName, fromServiceType, toApplicationName, toServiceType);
+        LinkKey linkKey = LinkKey.of(fromApplicationName, fromServiceType, toApplicationName, toServiceType);
         LinkData sourceLinkData = sourceLinkDataMap.getLinkData(linkKey);
         String assertMessage = String.format("%s[%s] to %s[%s] source link data does not exist", fromApplicationName, fromServiceType.getName(), toApplicationName, toServiceType.getName());
         Assertions.assertNotNull(sourceLinkData, assertMessage);
     }
 
     private void assertTargetLinkData(LinkDataMap targetLinkDataMap, String fromApplicationName, ServiceType fromServiceType, String toApplicationName, ServiceType toServiceType) {
-        LinkKey linkKey = new LinkKey(fromApplicationName, fromServiceType, toApplicationName, toServiceType);
+        LinkKey linkKey = LinkKey.of(fromApplicationName, fromServiceType, toApplicationName, toServiceType);
         LinkData targetLinkData = targetLinkDataMap.getLinkData(linkKey);
         String assertMessage = String.format("%s[%s] from %s[%s] target link data does not exist", toApplicationName, toServiceType.getName(), fromApplicationName, fromServiceType.getName());
         Assertions.assertNotNull(targetLinkData, assertMessage);
